--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,11 @@
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
-/[Mm]etadata/
 /Assets/AssetStoreTools*
 ExportedObj/
+metadata/
 *.svd
+UnityLockFile
 
 # Unity3D generated meta files
 *.pidb.meta
