--- a/TheGame.CSharp.csproj
+++ b/TheGame.CSharp.csproj
@@ -13,8 +13,7 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>5.3.4f1</UnityVersion>
@@ -69,15 +68,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Properties\AssemblyInfo.cs" />
     <Compile Include="Assets\CSharp 6.0 Support\AsyncTools\AsyncTools.cs" />
     <Compile Include="Assets\CSharp 6.0 Support\AsyncTools\UnityScheduler.cs" />
     <Compile Include="Assets\CSharp 6.0 Support\AsyncTools\UnitySynchronizationContext.cs" />
     <Compile Include="Assets\CSharp 6.0 Support\AsyncTools\UnityTaskScheduler.cs" />
     <Compile Include="Assets\CSharp 6.0 Support\FormattableString\FormattableString.cs" />
     <Compile Include="Assets\CSharp 6.0 Support\FormattableString\FormattableStringFactory.cs" />
+    <Compile Include="Assets\Properties\AssemblyInfo.cs" />
+    <Compile Include="Assets\TheGame\GameLoader.cs" />
+    <Compile Include="Assets\TheGame\GameLogic.cs" />
     <Compile Include="Assets\TheGame\GameVersion.cs" />
     <Compile Include="Assets\TheGame\Menu.cs" />
+    <Compile Include="Assets\TheGame\UI\Progressbar.cs" />
     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AKRESULT.cs" />
     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkActionOnEventType.cs" />
     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkAudioFormat.cs" />
@@ -182,6 +184,5 @@
     <None Include="Assets\Wwise\Version.txt" />
     <None Include="Assets\WwiseSettings.xml" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
